[gd_scene load_steps=11 format=3 uid="uid://cxm5k6qgvwqhf"]

[ext_resource type="Script" path="res://scenes/main/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/core/game_world.gd" id="2_game_world"]
[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="3_game_ui"]
[ext_resource type="PackedScene" uid="uid://cqh8myx52ydw4" path="res://scenes/ui/city_screen.tscn" id="4_city_screen"]
[ext_resource type="PackedScene" uid="uid://b7pqxm8ydw4k5" path="res://scenes/ui/tech_tree.tscn" id="5_tech_tree"]
[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="6_minimap"]
[ext_resource type="PackedScene" uid="uid://djr7kp2xv8m4n" path="res://scenes/ui/victory_screen.tscn" id="7_victory"]
[ext_resource type="PackedScene" uid="uid://cx8m7plxanqk2" path="res://scenes/ui/civics_screen.tscn" id="8_civics"]
[ext_resource type="PackedScene" uid="uid://dw3kpm8t7qr5n" path="res://scenes/ui/trade_screen.tscn" id="9_trade"]
[ext_resource type="PackedScene" uid="uid://cx9k4pm7t8r2q" path="res://scenes/ui/diplomacy_screen.tscn" id="10_diplomacy"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="GameWorld" type="Node2D" parent="."]
script = ExtResource("2_game_world")

[node name="GridLayer" type="Node2D" parent="GameWorld"]

[node name="EntityLayer" type="Node2D" parent="GameWorld"]

[node name="UILayer" type="CanvasLayer" parent="GameWorld"]

[node name="ScreenUILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="GameUI" type="Control" parent="ScreenUILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_game_ui")

[node name="TopBar" type="Panel" parent="ScreenUILayer/GameUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScreenUILayer/GameUI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TurnLabel" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Turn 1 - 4000 BC"

[node name="GoldLabel" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Gold: 0 (+0)"

[node name="ScienceLabel" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Science: 0"

[node name="ScienceRateContainer" type="HBoxContainer" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScienceRateLabel" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer/ScienceRateContainer"]
layout_mode = 2
text = "Rate:"

[node name="ScienceRateSlider" type="HSlider" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer/ScienceRateContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
min_value = 0.0
max_value = 100.0
step = 10.0
value = 100.0

[node name="ScienceRateValue" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer/ScienceRateContainer"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "100%"

[node name="TechButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Tech (T)"

[node name="CivicsButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Civics (C)"

[node name="DiplomacyButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Diplomacy (D)"

[node name="EspionageButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Espionage (E)"

[node name="VotingButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "UN (U)"

[node name="SpaceshipButton" type="Button" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Spaceship (P)"

[node name="Spacer" type="Control" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CivLabel" type="Label" parent="ScreenUILayer/GameUI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Roman Empire"

[node name="UnitPanel" type="Panel" parent="ScreenUILayer/GameUI"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -300.0
offset_right = 260.0
offset_bottom = -10.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenUILayer/GameUI/UnitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnitName" type="Label" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Warrior"

[node name="UnitStrength" type="Label" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2
text = "Strength: 2.0"

[node name="UnitMovement" type="Label" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2
text = "Movement: 1/1"

[node name="UnitHealth" type="ProgressBar" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="ActionButtons" type="HBoxContainer" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2

[node name="FortifyButton" type="Button" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Fortify (F)"

[node name="SkipButton" type="Button" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Skip (Space)"

[node name="WorkerActions" type="VBoxContainer" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="WorkerLabel" type="Label" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer/WorkerActions"]
layout_mode = 2
text = "Build:"
theme_override_font_sizes/font_size = 14

[node name="WorkerButtonsContainer" type="GridContainer" parent="ScreenUILayer/GameUI/UnitPanel/VBoxContainer/WorkerActions"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="EndTurnButton" type="Button" parent="ScreenUILayer/GameUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn (Enter)"

[node name="MiniMap" type="Panel" parent="ScreenUILayer/GameUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -230.0
offset_right = -10.0
offset_bottom = -70.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("6_minimap")

[node name="CityScreen" parent="ScreenUILayer" instance=ExtResource("4_city_screen")]

[node name="TechTree" parent="ScreenUILayer" instance=ExtResource("5_tech_tree")]

[node name="VictoryScreen" parent="ScreenUILayer" instance=ExtResource("7_victory")]

[node name="CivicsScreen" parent="ScreenUILayer" instance=ExtResource("8_civics")]

[node name="TradeScreen" parent="ScreenUILayer" instance=ExtResource("9_trade")]

[node name="DiplomacyScreen" parent="ScreenUILayer" instance=ExtResource("10_diplomacy")]
